--- a/_config.yml
+++ b/_config.yml
@@ -104,5 +104,6 @@ theme: icarus
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
   type: git
-  repo: https://github.com/ShawayL/ShawayL.github.io.git
+  #repo: https://github.com/ShawayL/ShawayL.github.io.git
+  repo: git@github.com:ShawayL/ShawayL.github.io.git
   branch: master
