更新网站标签图标

--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -3,7 +3,7 @@ variant: default
 #logo: /img/logo.svg
 logo: /jpg/logo.jpg
 head:
-    favicon: /img/favicon.svg
+    favicon: /jpg/logo.jpg
     manifest:
         name: 
         short_name: 
