--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -133,7 +133,7 @@ widgets:
         type: profile
         author: Shaway
         author_title: 但行好事，莫问前程
-        location: Demacia
+        location: The junction of Teyvat and Demacia
         avatar: /jpg/sasuke.jpg
         avatar_rounded: true
         gravatar: 
