修改目录位置

--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -156,7 +156,7 @@ widgets:
             #    url: /
     -
         # 目录
-        position: left
+        position: right
         type: toc
         index: true
         collapsed: true
