固定右侧目录

--- a/_config.icarus.yml
+++ b/_config.icarus.yml
@@ -125,7 +125,7 @@ sidebar:
         # 当页面滚动时左侧侧边栏是否停留在顶部
         sticky: true
     right:
-        sticky: false
+        sticky: true
 widgets:
     -
         # 个人信息
