--- a/_config.yml
+++ b/_config.yml
@@ -105,5 +105,5 @@ theme: icarus
 deploy:
   type: git
   #repo: https://github.com/ShawayL/ShawayL.github.io.git
-  repo: git@github.com:ShawayL/ShawayL.github.io.git
+  repo: git@github.com:appolostar/appolostar.github.io.git
   branch: master
